# SokuFramedataEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  mkappimage.sh  prepareAndroidBuild.sh
assets/: chr.txt  dats.json  editorIcon.pfi  settings.json
assets/characters/arsene/: chr.json
assets/characters/merilia/: chr.json
assets/characters/stickman/: chr.json  framedata.json  palette0.act  palette1.act  palette2.act  palette3.act  palette4.act  palette5.act  palette6.act  palette7.act  subobj_data.json
assets/characters/template/: template_chr.json
assets/characters/victoria_star/: chr.json  framedata.json  subobj_data.json  subobjects.json
assets/gui/: about.gui  color.gui  edit.gui  editor.gui  export_images.gui  loading.gui  open_file_dialog.gui  overlay.gui  overwrite_warning.gui  palEditor.gui  quitConfirm.gui  settings.gui  slider.gui
assets/gui/editor/: about.gui  animationWindow.gui  layout.gui  load_folder.gui  settings.gui  shortcut.gui  shortcuts.gui
assets/gui/editor/character/: actionCreate.gui  animation.gui  animationWindow.gui  attackFlags.gui  attackFlags_objects.gui  blendProperties.gui  blockProperties.gui  defenseFlags.gui  defenseFlags_objects.gui  framedata.gui  generalProperties.gui  hitProperties.gui  palette.gui
assets/gui/editor/locale/: en.json  fr.json
assets/gui/editor/palette/: add.gui  palette.gui
assets/gui/themes/: BabyBlue.style  Black.style  Black.txt  Dark.style  LICENSE.txt  LICENSE_Light_Dark.txt  Light.style  TransparentGrey.style  White.style
assets/labels/: alice.json  aya.json  chirno.json  common.json  patchouli.json  remilia.json  standard.json
assets/stages/: platforms.json
pkgs/: FindSFML.cmake  FindTGUI.cmake
src/Core/: Logger.cpp  Logger.hpp  SoFGV.hpp  Utils.cpp  Utils.hpp
src/Core/Resources/: FrameData.cpp  FrameData.hpp  Game.cpp  Game.hpp  Screen.cpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp  version.h
src/FrameComparer/: main.cpp
src/FrameDataEditor/: ActionName.cpp  ActionName.hpp  EditableObject.cpp  EditableObject.hpp  FrameDataEditor.cpp  FrameDataEditor.hpp  OverlayObject.cpp  OverlayObject.hpp  PngLoader.cpp  PngLoader.hpp  Rectangle.cpp  Rectangle.hpp  dataEditor.cpp  fdeditor.rc  version.rc
src/FrameDataEditor/Operations/: BasicData2StepOperation.hpp  BasicDataDouble2Operation.hpp  BasicDataDoubleOperation.hpp  BasicDataOperation.hpp  BasicDataOperationSeq.hpp  BasicDataQuadOperation.hpp  BoxModificationOperation.cpp  BoxModificationOperation.hpp  CleanPropertiesOperation.cpp  CleanPropertiesOperation.hpp  ClearAttackOperation.cpp  ClearAttackOperation.hpp  ClearBlockOperation.cpp  ClearBlockOperation.hpp  ClearHitOperation.cpp  ClearHitOperation.hpp  ColorEditionOperation.cpp  ColorEditionOperation.hpp  CreateBlockOperation.cpp  CreateBlockOperation.hpp  CreateBoxOperation.cpp  CreateBoxOperation.hpp  CreateFrameOperation.cpp  CreateFrameOperation.hpp  CreateMoveOperation.cpp  CreateMoveOperation.hpp  CreatePaletteOperation.cpp  CreatePaletteOperation.hpp  DummyOperation.cpp  DummyOperation.hpp  EditBoxOperation.cpp  EditBoxOperation.hpp  EditColorOperation.cpp  EditColorOperation.hpp  EditColorsOperation.cpp  EditColorsOperation.hpp  EditSoundOperation.cpp  EditSoundOperation.hpp  EditSpriteOperation.cpp  EditSpriteOperation.hpp  (+28 more)
src/FrameDataEditor/UI/: ColorPlaneWidget.cpp  ColorPlaneWidget.hpp  ColorSliderWidget.cpp  ColorSliderWidget.hpp  ColorWidgets.hpp  FileDialog.cpp  FileDialog.hpp  LocalizedContainer.hpp  MainWindow.cpp  MainWindow.hpp  PackageFileDialog.cpp  PackageFileDialog.hpp  PreviewWidget.cpp  PreviewWidget.hpp  RotatedBox.cpp  RotatedBox.hpp  SettingsWindow.cpp  SettingsWindow.hpp  ShortcutsWindow.cpp  ShortcutsWindow.hpp
src/Game/: main.cpp  version.rc
src/Game/Scenes/: CharacterSelect.cpp  CharacterSelect.hpp  InGame.cpp  InGame.hpp  LoadingScene.cpp  PracticeInGame.cpp  PracticeInGame.hpp  ReplayInGame.cpp  ReplayInGame.hpp  SkeletonData.hpp
src/Game/Scenes/MainMenu/: Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  TitleScreen.cpp  TitleScreen.hpp
src/Game/Scenes/Network/: ClientInGame.cpp  NetworkCharacterSelect.cpp  NetworkCharacterSelect.hpp  NetworkInGame.cpp  ServerCharacterSelect.cpp  ServerInGame.cpp  SpectatorCharacterSelect.cpp  SpectatorInGame.cpp  SyncTestInGame.cpp
src/LagSwitch/: main.cpp
src/LibCore/: LibCore.hpp  Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp  benchmark_state_ser.cpp  version.rc
src/LibCore/Data/: Vector.hpp
src/LibCore/Inputs/: RemoteInput.hpp  ReplayInput.cpp  ReplayInput.hpp
src/LibCore/Objects/: CheckUtils.hpp  FakeObject.cpp  FakeObject.hpp  Object.cpp  Object.hpp  Particle.cpp  ParticleGenerator.cpp  ParticleGenerator.hpp  Platform.cpp  Platform.hpp
src/LibCore/Objects/Characters/: Character.cpp  Character.hpp  CharacterParams.hpp  Projectile.cpp  Projectile.hpp  SubObject.cpp
src/LibCore/Resources/: Game.cpp  Game.hpp  ObjectFactory.cpp  SceneManager.cpp  SceneManager.hpp  Settings.cpp  Settings.hpp  version.h
src/LibCore/Resources/Assets/: FileManager.cpp  FileManager.hpp  FrameData.cpp  FrameData.hpp  MoveListData.cpp  MoveListData.hpp
src/LibCore/Resources/Battle/: BattleManager.cpp  BattleManager.hpp  PracticeBattleManager.cpp  PracticeBattleManager.hpp  RandomWrapper.cpp
src/LibCore/Resources/Network/: Connection.cpp  Connection.hpp  IConnection.hpp  Packet.cpp  RollbackMachine.cpp  RollbackMachine.hpp  ServerConnection.cpp  SpectatorConnection.cpp
src/LibCore/SDL2/: ControllerInput.cpp  ControllerInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Screen.cpp  Screen.hpp  SoundManager.hpp  TextureManager.hpp
src/LibCore/SFML/: Color.cpp  Color.hpp  ControllerInput.cpp  ControllerInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Screen.cpp  Screen.hpp  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.hpp  TextureManager.cpp  TextureManager.hpp  VirtualController.cpp  VirtualController.hpp
src/SpritesheetGenerator/: main.py
src/WikiGenerator/: chr_data_generator.py  wiki_page_generator.py
src/WikiGenerator/premade/: cancel_tree.html
(+37 files in other folders)
